[gd_scene load_steps=12 format=3 uid="uid://wslvybc7gauj"]

[ext_resource type="Script" path="res://Scripts/SoundTesting.gd" id="1_54bhv"]
[ext_resource type="FontFile" uid="uid://bslnk4jwc4au1" path="res://Fonts/DMSans_24pt-Regular.ttf" id="1_j6eir"]
[ext_resource type="FontFile" uid="uid://dynbc330hutk" path="res://Fonts/DMSans_24pt-Medium.ttf" id="2_0tusy"]
[ext_resource type="Texture2D" uid="uid://bwqcb6ijs7s4q" path="res://Artwork/starGrey.png" id="6_ycw2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ionqs"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crrfk"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5114w"]
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.129412, 0.129412, 0.129412, 0.486275)
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4skss"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i46g6"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2vqy"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jcuu"]
content_margin_left = 10.0
bg_color = Color(0.854902, 0.929412, 0.980392, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 1
shadow_offset = Vector2(-2, 2)

[node name="SoundTesting" type="Node2D"]
script = ExtResource("1_54bhv")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1024.0
offset_bottom = 576.0
color = Color(0.631373, 0.823529, 0.945098, 1)

[node name="BGOptions" type="Label" parent="Background/ColorRect"]
layout_mode = 0
offset_left = 402.0
offset_top = 287.0
offset_right = 643.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0tusy")
theme_override_font_sizes/font_size = 22
text = "Low   Medium   High"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Title" type="Label" parent="Background/ColorRect"]
layout_mode = 0
offset_top = 27.0
offset_right = 1024.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0tusy")
theme_override_font_sizes/font_size = 60
text = "Sound Testing
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BG Noise Buttons" type="Node2D" parent="."]

[node name="Play BG Noise" type="Button" parent="BG Noise Buttons"]
offset_left = 364.0
offset_top = 442.0
offset_right = 664.0
offset_bottom = 534.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_j6eir")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ionqs")
theme_override_styles/hover = SubResource("StyleBoxFlat_crrfk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5114w")
text = "Play BG"

[node name="BGNoiseDropdown" type="OptionButton" parent="BG Noise Buttons"]
offset_left = 32.0
offset_top = 243.0
offset_right = 400.0
offset_bottom = 303.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0tusy")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_4skss")
theme_override_styles/normal = SubResource("StyleBoxFlat_i46g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2vqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0jcuu")
button_pressed = true
item_count = 5
selected = 0
allow_reselect = true
popup/item_0/text = "Background Noise"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "None"
popup/item_1/id = 4
popup/item_2/text = "Announcer"
popup/item_2/id = 1
popup/item_3/text = "Bus Interior"
popup/item_3/id = 2
popup/item_4/text = "Food Court"
popup/item_4/id = 3

[node name="BGLow" type="TextureButton" parent="BG Noise Buttons"]
offset_left = 408.0
offset_top = 238.0
offset_right = 658.0
offset_bottom = 448.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_ycw2m")

[node name="BGMedium" type="TextureButton" parent="BG Noise Buttons"]
offset_left = 490.0
offset_top = 238.0
offset_right = 740.0
offset_bottom = 448.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_ycw2m")

[node name="BGHigh" type="TextureButton" parent="BG Noise Buttons"]
offset_left = 568.0
offset_top = 238.0
offset_right = 818.0
offset_bottom = 448.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("6_ycw2m")

[node name="TTS Buttons" type="Node2D" parent="."]

[node name="TTS Dropdown" type="OptionButton" parent="TTS Buttons"]
offset_left = 33.0
offset_top = 154.0
offset_right = 399.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0tusy")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxFlat_4skss")
theme_override_styles/normal = SubResource("StyleBoxFlat_i46g6")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2vqy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0jcuu")
button_pressed = true
item_count = 1
selected = 0
allow_reselect = true
popup/item_0/text = "Text to Speech Voice"
popup/item_0/id = 0

[node name="TTS Text" type="LineEdit" parent="TTS Buttons"]
offset_left = 409.0
offset_top = 154.0
offset_right = 774.0
offset_bottom = 213.0
text = "Enter Text To Play Here Then Press Enter"
alignment = 1

[node name="TTS Volume" type="LineEdit" parent="TTS Buttons"]
offset_left = 786.0
offset_top = 156.0
offset_right = 856.0
offset_bottom = 213.0

[node name="Sound FX Buttons" type="Node2D" parent="."]

[node name="SFX Text" type="LineEdit" parent="Sound FX Buttons"]
offset_left = 32.0
offset_top = 330.0
offset_right = 401.0
offset_bottom = 389.0
text = "Enter File Name To Play Here Then Press Enter"
alignment = 1

[node name="SFX Volume" type="LineEdit" parent="Sound FX Buttons"]
offset_left = 409.0
offset_top = 332.0
offset_right = 479.0
offset_bottom = 389.0

[connection signal="pressed" from="BG Noise Buttons/Play BG Noise" to="." method="bgButton"]
[connection signal="item_selected" from="BG Noise Buttons/BGNoiseDropdown" to="." method="bgNoiseSelected"]
[connection signal="pressed" from="BG Noise Buttons/BGLow" to="." method="BGLowPressed"]
[connection signal="pressed" from="BG Noise Buttons/BGMedium" to="." method="BGMediumPressed"]
[connection signal="pressed" from="BG Noise Buttons/BGHigh" to="." method="BGHighPressed"]
[connection signal="item_selected" from="TTS Buttons/TTS Dropdown" to="." method="voiceSelected"]
[connection signal="text_submitted" from="TTS Buttons/TTS Text" to="." method="textSubmitted"]
[connection signal="text_changed" from="TTS Buttons/TTS Volume" to="." method="TTSVolumeChanged"]
[connection signal="text_submitted" from="Sound FX Buttons/SFX Text" to="." method="editFXSound"]
[connection signal="text_changed" from="Sound FX Buttons/SFX Volume" to="." method="editFXVolume"]
